--- a/src/pages/CountryDetail/CountryDetail.module.scss
+++ b/src/pages/CountryDetail/CountryDetail.module.scss
@@ -1,4 +1,5 @@
 @use "sass:math";
+@use "styles/_breakpoints.scss";
 
 .root {
   width: 100%;
@@ -12,13 +13,26 @@
 .wrapper {
   display: flex;
   align-items: center;
+
+  @include breakpoints.down("tablet") {
+    flex-direction: column;
+  }
 }
 
 .flag {
   flex: 1;
   position: relative;
   margin-right: 6.5rem;
+  width: 100%;
 
+  @include breakpoints.down("laptop") {
+    margin-right: 3rem;
+  }
+
+  @include breakpoints.down("tablet") {
+    margin-right: 0;
+    margin-bottom: 3.5rem;
+  }
   &::after {
     content: "";
     padding-bottom: math.div(100%, math.div(7, 5));
@@ -47,6 +61,9 @@
   grid-template-rows: repeat(5, min-content);
   grid-auto-flow: column;
   margin-bottom: 4rem;
+  @include breakpoints.down("tablet") {
+    grid-template-rows: repeat(8, min-content);
+  }
 }
 
 .borders {
@@ -60,6 +77,9 @@
   display: inline-flex;
   flex-wrap: wrap;
   gap: 0.5rem;
+  @include breakpoints.down("tablet") {
+    gap: 1rem;
+  }
 }
 
 .borderListItem {
@@ -67,5 +87,6 @@
   padding: 0.5rem;
   width: 6.25rem;
   text-align: center;
+  border-radius: 2px;
   box-shadow: 0px 0px 6px hsl(0deg 0% 0% / 15%);
 }
