--- a/src/pages/Home/Home.module.scss
+++ b/src/pages/Home/Home.module.scss
@@ -1,8 +1,15 @@
+@use "styles/_breakpoints.scss";
+
 .toolbar {
   width: 100%;
   display: flex;
   justify-content: space-between;
   margin-bottom: 2.5rem;
+  gap: 1.5rem;
+
+  @include breakpoints.down("tablet") {
+    flex-direction: column;
+  }
 }
 
 .search {
@@ -14,8 +21,12 @@
 }
 
 .cards {
+  width: 100%;
   display: grid;
-  grid-template-columns: repeat(4, 1fr);
-  grid-template-rows: minmax(265px, auto);
+  justify-content: center;
+  grid-template-columns: repeat(auto-fill, minmax(265px, 265px));
   grid-gap: 3.75rem;
+  @include breakpoints.down("tablet") {
+    grid-gap: 3rem;
+  }
 }
